@@ -1,13 +1,13 @@
 /*
  * Quasar: lightweight strands and actors for the JVM.
  * Copyright (c) 2013-2015, Parallel Universe Software Co. All rights reserved.
- * 
+ *
  * This program and the accompanying materials are dual-licensed under
  * either the terms of the Eclipse Public License v1.0 as published by
  * the Eclipse Foundation
- *  
+ *
  *   or (per the licensee's choosing)
- *  
+ *
  * under the terms of the GNU Lesser General Public License version 3.0
  * as published by the Free Software Foundation.
  */
@@ -22,14 +22,16 @@
 package co.paralleluniverse.strands.channels;
 
 import co.paralleluniverse.common.util.DelegatingEquals;
-import co.paralleluniverse.common.util.UtilUnsafe;
+import co.paralleluniverse.strands.Strand;
 import co.paralleluniverse.strands.Synchronization;
 import co.paralleluniverse.strands.Timeout;
+
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.VarHandle;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.TimeUnit;
 
 /**
- *
  * @author Doug Lea
  * @author pron
  */
@@ -191,7 +193,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
         throw new InterruptedException();
     }
 
-    protected Message receiveInternal(long timeout, TimeUnit unit) throws  InterruptedException {
+    protected Message receiveInternal(long timeout, TimeUnit unit) throws InterruptedException {
         if (receiveClosed)
             return closeValue();
 
@@ -231,7 +233,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
     }
 
     private void signalWaitersOnClose() {
-        for (Node p = head; p != null;) {
+        for (Node p = head; p != null; ) {
             if (!p.isMatched()) {
                 if (!p.isData) {
                     if (p.casItem(null, CHANNEL_CLOSED)) // match waiting requesters with CHANNEL_CLOSED
@@ -246,6 +248,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
                 p = head;
         }
     }
+
     /////////////////////////////////////////
     private static final long serialVersionUID = -3223113410248163686L;
     /**
@@ -293,12 +296,12 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
 
         // CAS methods for fields
         final boolean casNext(Node cmp, Node val) {
-            return UNSAFE.compareAndSwapObject(this, nextOffset, cmp, val);
+            return NEXT.compareAndSet(this, cmp, val);
         }
 
         final boolean casItem(Object cmp, Object val) {
             // assert cmp == null || cmp.getClass() != Node.class;
-            return UNSAFE.compareAndSwapObject(this, itemOffset, cmp, val);
+            return ITEM.compareAndSet(this, cmp, val);
         }
 
         /**
@@ -306,13 +309,13 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
          * only be seen after publication via casNext.
          */
         Node(SelectActionImpl sa) {
-            UNSAFE.putObject(this, itemOffset, sa.message()); // relaxed write
-            UNSAFE.putObject(this, saOffset, sa); // relaxed write
+            ITEM.set(this, sa.message()); // UNSAFE.putObject(this, itemOffset, sa.message()); // relaxed write
+            SA.set(this, sa); // UNSAFE.putObject(this, saOffset, sa); // relaxed write
             this.isData = sa.isData();
         }
 
         Node(Object item, boolean isData) {
-            UNSAFE.putObject(this, itemOffset, item); // relaxed write
+            ITEM.set(this, item); // UNSAFE.putObject(this, itemOffset, item); // relaxed write
             this.isData = isData;
         }
 
@@ -321,7 +324,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
          * only after CASing head field, so uses relaxed write.
          */
         final void forgetNext() {
-            UNSAFE.putObject(this, nextOffset, this);
+            NEXT.set(this, this); // UNSAFE.putObject(this, nextOffset, this);
         }
 
         /**
@@ -334,9 +337,9 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
          * else we don't care).
          */
         final void forgetContents() {
-            UNSAFE.putObject(this, itemOffset, this);
-            UNSAFE.putObject(this, saOffset, null);
-            UNSAFE.putObject(this, waiterOffset, null);
+            ITEM.set(this, this); // UNSAFE.putObject(this, itemOffset, this);
+            SA.set(this, null); // UNSAFE.putObject(this, saOffset, null);
+            WAITER.set(this, null); // UNSAFE.putObject(this, waiterOffset, null);
         }
 
         /**
@@ -400,26 +403,45 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
                 sa.won();
             }
         }
+
         private static final long serialVersionUID = -3375979862319811754L;
-        // Unsafe mechanics
-        private static final sun.misc.Unsafe UNSAFE;
-        private static final long itemOffset;
-        private static final long saOffset;
-        private static final long nextOffset;
-        private static final long waiterOffset;
+
+        private static final VarHandle ITEM;
+        private static final VarHandle SA;
+        private static final VarHandle NEXT;
+        private static final VarHandle WAITER;
 
         static {
             try {
-                UNSAFE = UtilUnsafe.getUnsafe();
+                MethodHandles.Lookup l = MethodHandles.lookup();
                 Class k = Node.class;
-                itemOffset = UNSAFE.objectFieldOffset(k.getDeclaredField("item"));
-                saOffset = UNSAFE.objectFieldOffset(k.getDeclaredField("sa"));
-                nextOffset = UNSAFE.objectFieldOffset(k.getDeclaredField("next"));
-                waiterOffset = UNSAFE.objectFieldOffset(k.getDeclaredField("waiter"));
-            } catch (Exception e) {
-                throw new Error(e);
+                ITEM = l.findVarHandle(k, "item", Object.class);
+                SA = l.findVarHandle(k, "sa", SelectActionImpl.class);
+                NEXT = l.findVarHandle(k, "next", k);
+                WAITER = l.findVarHandle(k, "waiter", Strand.class);
+            } catch (ReflectiveOperationException e) {
+                throw new ExceptionInInitializerError(e);
             }
         }
+//        // Unsafe mechanics
+//        private static final sun.misc.Unsafe UNSAFE;
+//        private static final long itemOffset;
+//        private static final long saOffset;
+//        private static final long nextOffset;
+//        private static final long waiterOffset;
+//
+//        static {
+//            try {
+//                UNSAFE = UtilUnsafe.getUnsafe();
+//                Class k = Node.class;
+//                itemOffset = UNSAFE.objectFieldOffset(k.getDeclaredField("item"));
+//                saOffset = UNSAFE.objectFieldOffset(k.getDeclaredField("sa"));
+//                nextOffset = UNSAFE.objectFieldOffset(k.getDeclaredField("next"));
+//                waiterOffset = UNSAFE.objectFieldOffset(k.getDeclaredField("waiter"));
+//            } catch (Exception e) {
+//                throw new Error(e);
+//            }
+//        }
     }
 
     static class Token {
@@ -431,6 +453,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
             this.pred = pred;
         }
     }
+
     /**
      * head of the queue; null until first enqueue
      */
@@ -446,15 +469,15 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
 
     // CAS methods for fields
     private boolean casTail(Node cmp, Node val) {
-        return UNSAFE.compareAndSwapObject(this, tailOffset, cmp, val);
+        return TAIL.compareAndSet(this, cmp, val); // UNSAFE.compareAndSwapObject(this, tailOffset, cmp, val);
     }
 
     private boolean casHead(Node cmp, Node val) {
-        return UNSAFE.compareAndSwapObject(this, headOffset, cmp, val);
+        return HEAD.compareAndSet(this, cmp, val); // UNSAFE.compareAndSwapObject(this, headOffset, cmp, val);
     }
 
     private boolean casSweepVotes(int cmp, int val) {
-        return UNSAFE.compareAndSwapInt(this, sweepVotesOffset, cmp, val);
+        return SWEEP_VOTES.compareAndSet(this, cmp, val); // UNSAFE.compareAndSwapInt(this, sweepVotesOffset, cmp, val);
     }
 
     /*
@@ -498,7 +521,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
         Node s = null;                        // the node to append, if needed
 
         retry:
-        for (;;) {                            // restart on append race
+        for (; ; ) {                            // restart on append race
             Object item = tryMatch(null, e, haveData);
             if (item != NO_MATCH)
                 return item;
@@ -524,7 +547,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
         Node s = new Node(null, false);      // the node to append
 
         retry:
-        for (;;) {                            // restart on append race
+        for (; ; ) {                            // restart on append race
             Object item = tryMatch(null, null, false);
             if (item != NO_MATCH) {
                 s.item = item;
@@ -552,7 +575,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
         Node s = null;                        // the node to append, if needed
 
         retry:
-        for (;;) {                            // restart on append race
+        for (; ; ) {                            // restart on append race
             if (!e.lease())
                 return null;
             if (isClosed() || (isSendClosed() && e.isData())) {
@@ -587,7 +610,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
     private Object tryMatch(SelectActionImpl sa, Message e, boolean haveData) {
         boolean closed = isSendClosed(); // must be read before trying to match so as not to miss puts
 
-        for (Node h = head, p = h; p != null;) { // find & match first node
+        for (Node h = head, p = h; p != null; ) { // find & match first node
             boolean isData = p.isData;
             Object item = p.item;
 
@@ -614,7 +637,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
                 if (leasedp) {
                     if (p.casItem(item, e)) { // match
                         p.won();
-                        for (Node q = p; q != h;) {
+                        for (Node q = p; q != h; ) {
                             Node n = q.next;  // update by 2 unless singleton
                             if (head == h && casHead(h, n == null ? q : n)) {
                                 h.forgetNext();
@@ -648,11 +671,11 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
      * @param s        the node to append
      * @param haveData true if appending in data mode
      * @return null on failure due to losing race with append in
-     *         different mode, else s's predecessor, or s itself if no
-     *         predecessor
+     * different mode, else s's predecessor, or s itself if no
+     * predecessor
      */
     private Node tryAppend(Node s, boolean haveData) {
-        for (Node t = tail, p = t;;) {        // move p to last node and append
+        for (Node t = tail, p = t; ; ) {        // move p to last node and append
             Node n, u;                        // temps for reads of next & tail
             if (p == null && (p = head) == null) {
                 if (casHead(null, s))
@@ -669,7 +692,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
                     while ((tail != t || !casTail(t, s))
                             && (t = tail) != null
                             && (s = t.next) != null && // advance and retry
-                            (s = s.next) != null && s != t);
+                            (s = s.next) != null && s != t) ;
                 }
                 return p;
             }
@@ -697,7 +720,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
         if (spins == 0)
             requestUnpark(s, w);
 
-        for (;;) {
+        for (; ; ) {
             Object item = s.item;
 
             if (item == CHANNEL_CLOSED)
@@ -755,6 +778,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
     }
 
     /* -------------- Traversal methods -------------- */
+
     /**
      * Returns the successor of p, or the head node if p.next has been
      * linked to self, which will only be true if traversing with a
@@ -783,7 +807,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
      */
     private int countOfMode(boolean data) {
         int count = 0;
-        for (Node p = head; p != null;) {
+        for (Node p = head; p != null; ) {
             if (!p.isMatched()) {
                 if (p.isData != data)
                     return 0;
@@ -802,6 +826,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
     }
 
     /* -------------- Removal methods -------------- */
+
     /**
      * Unsplices (now or later) the given deleted/cancelled node with
      * the given predecessor.
@@ -823,7 +848,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
             Node n = s.next;
             if (n == null
                     || (n != s && pred.casNext(s, n) && pred.isMatched())) {
-                for (;;) {               // check if at, or could be, head
+                for (; ; ) {               // check if at, or could be, head
                     Node h = head;
                     if (h == pred || h == s || h == null)
                         return;          // at head or list empty
@@ -836,7 +861,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
                         h.forgetNext();  // advance head
                 }
                 if (pred.next != pred && s.next != s) { // recheck if offlist
-                    for (;;) {           // sweep now if enough votes
+                    for (; ; ) {           // sweep now if enough votes
                         int v = sweepVotes;
                         if (v < SWEEP_THRESHOLD) {
                             if (casSweepVotes(v, v + 1))
@@ -856,7 +881,7 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
      * traversal from head.
      */
     private void sweep() {
-        for (Node p = head, s, n; p != null && (s = p.next) != null;) {
+        for (Node p = head, s, n; p != null && (s = p.next) != null; ) {
             if (!s.isMatched())
                 // Unmatched nodes are never self-linked
                 p = s;
@@ -894,21 +919,37 @@ public class TransferChannel<Message> implements StandardChannel<Message>, Selec
     public int getWaitingConsumerCount() {
         return countOfMode(false);
     }
-    // Unsafe mechanics
-    private static final sun.misc.Unsafe UNSAFE;
-    private static final long headOffset;
-    private static final long tailOffset;
-    private static final long sweepVotesOffset;
+
+    private static final VarHandle HEAD;
+    private static final VarHandle TAIL;
+    private static final VarHandle SWEEP_VOTES;
 
     static {
         try {
-            UNSAFE = UtilUnsafe.getUnsafe();
+            MethodHandles.Lookup l = MethodHandles.lookup();
             Class k = TransferChannel.class;
-            headOffset = UNSAFE.objectFieldOffset(k.getDeclaredField("head"));
-            tailOffset = UNSAFE.objectFieldOffset(k.getDeclaredField("tail"));
-            sweepVotesOffset = UNSAFE.objectFieldOffset(k.getDeclaredField("sweepVotes"));
-        } catch (Exception e) {
-            throw new Error(e);
+            HEAD = l.findVarHandle(k, "head", Node.class);
+            TAIL = l.findVarHandle(k, "tail", Node.class);
+            SWEEP_VOTES = l.findVarHandle(k, "sweepVotes", int.class);
+        } catch (ReflectiveOperationException e) {
+            throw new ExceptionInInitializerError(e);
         }
     }
+//    // Unsafe mechanics
+//    private static final sun.misc.Unsafe UNSAFE;
+//    private static final long headOffset;
+//    private static final long tailOffset;
+//    private static final long sweepVotesOffset;
+//
+//    static {
+//        try {
+//            UNSAFE = UtilUnsafe.getUnsafe();
+//            Class k = TransferChannel.class;
+//            headOffset = UNSAFE.objectFieldOffset(k.getDeclaredField("head"));
+//            tailOffset = UNSAFE.objectFieldOffset(k.getDeclaredField("tail"));
+//            sweepVotesOffset = UNSAFE.objectFieldOffset(k.getDeclaredField("sweepVotes"));
+//        } catch (Exception e) {
+//            throw new Error(e);
+//        }
+//    }
 }
